style: fix spy buttons alignment

--- a/src/bga-hacks/_bga-hacks.scss
+++ b/src/bga-hacks/_bga-hacks.scss
@@ -67,6 +67,7 @@ $playerQuickNavColor: rgb(51, 44, 38);
         display: inline-block;
         margin-left: 5px;
         color: $gaPlayerQuickNavColor;
+        vertical-align: text-bottom;
     }
 }
 
